# stock-prediction

./: .gitignore  README.md  main.py  prj.py  pyproject.toml  requirements.txt
src/: __init__.py  components.py  helpers.py  indicators.py  predictions.py
