[project]
name = "quantx"
version = "0.1.0"
description = "QuantX: Stock Analysis and Forecast"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "yfinance>=1.4.0",
]
